Bug 311571 - mouse cursor isn't hidden
Summary: mouse cursor isn't hidden
Status: RESOLVED FIXED
Alias: None
Product: kscreensaver
Classification: Unmaintained
Component: locker-qml (other bugs)
Version First Reported In: 4.9.80 Beta1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-12 14:54 UTC by Martin Sandsmark
Modified: 2016-07-02 15:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Sandsmark 2012-12-12 14:54:42 UTC
when using normal screensavers the cursor isn't hidden anymore.

Reproducible: Always
Comment 1 Marco Martin 2013-01-10 20:41:47 UTC
Git commit 2c4d2b2ecf17105986e3f00810448d0bcc3bb9cb by Marco Martin.
Committed on 10/01/2013 at 21:40.
Pushed by mart into branch 'KDE/4.10'.

the screensaver window has an empty cursor
FIXED-IN:4.10

M  +1    -0    ksmserver/screenlocker/greeter/screensaverwindow.cpp

http://commits.kde.org/kde-workspace/2c4d2b2ecf17105986e3f00810448d0bcc3bb9cb
Comment 2 Janet 2013-05-21 03:37:23 UTC
Problem still exists in KDE SC 4-10.3, mouse cursor still is shown on top of screen savers.
Comment 3 Janet 2013-05-21 03:42:28 UTC
See also Bug 316459, Bug 319388, Bug 316979.
Comment 4 Wolfgang Bauer 2014-01-08 08:59:49 UTC
Git commit c1761755915ab59f418b801a6901230f67877047 by Wolfgang Bauer.
Committed on 08/01/2014 at 08:29.
Pushed by wbauer into branch 'KDE/4.11'.

Screenlocker: don't set the mouse cursor when grabbing the mouse

Setting the cursor to ArrowCursor when calling XGrabPointer() prevents
the Screen savers from blanking the mouse cursor.
With this change they can blank the mouse cursor again.
Related: bug 316459
FIXED-IN: 4.11.6
REVIEW: 114841

M  +1    -1    ksmserver/screenlocker/ksldapp.cpp

http://commits.kde.org/kde-workspace/c1761755915ab59f418b801a6901230f67877047
Comment 5 Jekyll Wu 2014-01-09 04:02:25 UTC
There will not be 4.11.6 for KDE SC as a whole.
Comment 6 Wolfgang Bauer 2014-01-14 16:57:15 UTC
Changed FIXED-IN to 4.12.2, as kde-workspace 4.11.6 is not released yet together with KDE SC 4.12.1, but it will be released on Jan. 4th together with KDE SC 4.12.2.