the screensaver window has an empty cursor

BUG:311571
FIXED-IN:4.10